--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -49,7 +49,7 @@ main {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: #e0e0e1;
+  background: var(--clr-dark-grey);
   border-right: 0 solid #e0e0e1;
   background-clip: padding-box;
   border-radius: 4px;
